fixed nav bar spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -59,14 +59,16 @@ nav {
 	position: fixed;
 	bottom: 0;
 	width: 100%;
-	border-radius: 5px;
-	background-color: rgb(142, 201, 233);
 }
 .navbar {
 	/* position: fixed;
 	bottom: 0; */
 	height: 3rem;
 	justify-content: space-around;
+
+	border-radius: 5px;
+	background-color: rgb(142, 201, 233);
+	padding: 0 1rem;
 }
 .navbar a {
 	text-decoration: none;
